font cleanup, use css variables for project colors

--- a/app/src/app.postcss
+++ b/app/src/app.postcss
@@ -4,46 +4,54 @@
 @tailwind utilities;
 
 @layer utilities {
-    .project-title-a {
-        view-transition-name: project-title;
-    }
+	.project-title-a {
+		view-transition-name: project-title;
+	}
+}
+
+@layer base {
+	:root {
+		--color-primary: rgb(2 76 164);
+		--color-primary-light: rgb(122 169 227);
+
+		font-family: Raleway;
+	}
 }
 
 h1 {
-    font-family: Flamenco;
-    text-transform: uppercase;
-    @apply tracking-wider;
+	font-family: 'Space Grotesk';
+	text-transform: uppercase;
+	@apply tracking-widest;
 }
 
 h2 {
-    font-family: "Space Grotesk";
-    font-size: 48px;
-    font-weight: bold;
-    text-transform: uppercase;
-    opacity: 50%;
-    margin-bottom: 24px;
-    @apply tracking-[0.5em] text-primary;
+	font-family: 'Space Grotesk';
+	font-size: 48px;
+	font-weight: bold;
+	text-transform: uppercase;
+	opacity: 50%;
+	margin-bottom: 24px;
+	@apply tracking-[0.5em] text-primary;
 }
 
 h3 {
-    font-family: "Space Grotesk";
-    font-size: 48px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: white;
-    -webkit-text-stroke: 2px #024CA4;
-    /* text-shadow:
+	font-family: 'Space Grotesk';
+	font-size: 48px;
+	font-weight: 600;
+	color: white;
+	-webkit-text-stroke: 2px #024ca4;
+	/* text-shadow:
         3px 3px 0 #024CA4,
         -1px -1px #024CA4,  
         1px -1px 0 #024CA4,
         -1px 1px 0 #024CA4,
         1px 1px 0 #024CA4; */
 
-    @apply tracking-wider;
+	@apply tracking-wider;
 }
 
 h4 {
-    font-family: "Space Mono";
-    font-size: 24px;
-    font-weight: bold;
+	font-family: 'Space Mono';
+	font-size: 24px;
+	font-weight: bold;
 }
