--- a/app/src/app.postcss
+++ b/app/src/app.postcss
@@ -13,6 +13,7 @@
 	:root {
 		--color-primary: rgb(2 76 164);
 		--color-primary-light: rgb(122 169 227);
+		--color-primary-lighter: rgb(243, 249, 255);
 
 		font-family: Raleway;
 	}
