improve responsive, make section imgs optional

--- a/app/src/app.postcss
+++ b/app/src/app.postcss
@@ -39,6 +39,7 @@ h3 {
 	font-family: 'Space Grotesk';
 	font-size: 48px;
 	font-weight: 600;
+	text-transform: uppercase;
 	color: white;
 	-webkit-text-stroke: 2px #024ca4;
 	/* text-shadow:
