--- a/packages/app/src/app.postcss
+++ b/packages/app/src/app.postcss
@@ -1,4 +1,3 @@
-/* Write your global styles here, in PostCSS syntax */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,6 +18,7 @@
 		--color-primary-lighter: rgb(243, 249, 255);
 
 		font-family: Raleway;
+		@apply antialiased;
 	}
 }
 
@@ -40,9 +40,8 @@ h2 {
 h3 {
 	font-family: 'Space Grotesk';
 	font-size: 48px;
-	font-weight: 400;
-	color: white;
-	@apply tracking-wider;
+	font-weight: 200;
+	@apply tracking-wider text-white;
 }
 
 h4 {
