--- a/packages/app/src/app.postcss
+++ b/packages/app/src/app.postcss
@@ -22,6 +22,10 @@
 	}
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 h1 {
 	font-family: 'Space Grotesk';
 	text-transform: uppercase;
@@ -54,4 +58,5 @@ h5 {
 	font-family: 'Raleway';
 	font-size: 20px;
 	font-weight: bold;
+	@apply text-slate-700;
 }
