full height html, body

--- a/packages/app/src/app.postcss
+++ b/packages/app/src/app.postcss
@@ -27,6 +27,12 @@ html {
 	max-width: 100vw;
 }
 
+html,
+body {
+	min-height: 100vh;
+	@apply bg-white;
+}
+
 h1 {
 	font-family: 'Space Grotesk';
 	text-transform: uppercase;
