--- a/packages/app/src/app.postcss
+++ b/packages/app/src/app.postcss
@@ -32,8 +32,8 @@ html {
 }
 
 .fp-section {
-	min-height: 100vh;
-	scroll-snap-align: center;
+	min-height: 100svh;
+	scroll-snap-align: start;
 }
 
 html,
