adj projecttitle colours, cleanup

--- a/packages/app/src/app.postcss
+++ b/packages/app/src/app.postcss
@@ -13,9 +13,9 @@
 
 @layer base {
 	:root {
-		--color-primary: rgb(2 76 164);
-		--color-primary-light: rgb(122 169 227);
-		--color-primary-lighter: rgb(243, 249, 255);
+		--color-primary: #6454F0;
+		--color-primary-light: #6eb6f5;
+		--color-primary-lighter: #6EE2F5;
 
 		font-family: Raleway;
 		@apply antialiased;
@@ -39,12 +39,12 @@ h1 {
 }
 
 h2 {
-	font-family: 'Space Grotesk';
-	font-size: 48px;
+	font-family: 'Raleway';
+	font-size: 54px;
 	font-weight: bold;
 	text-transform: uppercase;
 	margin-bottom: 24px;
-	@apply tracking-[0.5em] text-slate-500;
+	@apply tracking-[0.3em] text-slate-500;
 }
 
 h3 {
