use h1 for hi im cameron

--- a/packages/app/src/app.postcss
+++ b/packages/app/src/app.postcss
@@ -33,14 +33,16 @@ body {
 }
 
 h1 {
+	font-size: 48px;
 	font-family: 'Space Grotesk';
 	text-transform: uppercase;
+	font-weight: bold;
 	@apply tracking-widest text-slate-700;
 }
 
 h2 {
 	font-family: 'Raleway';
-	font-size: 54px;
+	font-size: 32px;
 	font-weight: bold;
 	text-transform: uppercase;
 	margin-bottom: 24px;
