--- a/packages/app/src/app.postcss
+++ b/packages/app/src/app.postcss
@@ -13,9 +13,12 @@
 
 @layer base {
 	:root {
-		--color-primary: #6454F0;
-		--color-primary-light: #6eb6f5;
-		--color-primary-lighter: #6EE2F5;
+		--color-primary: 100 84 240;
+		--color-primary-light: 110 182 245;
+		--color-primary-lighter: 110 226 245;
+		--color-primary-dark: 70 54 180;
+
+		--color-white: 248 250 252;
 
 		font-family: Raleway;
 		@apply antialiased;
