--- a/packages/app/static/global.css
+++ b/packages/app/static/global.css
@@ -52,7 +52,7 @@
 }
 
 html {
-	background-color: var(--white);
+	background-color: rgb(var(--white));
 	font-family: var(--font-family-sans), var(--font-family-serif), sans-serif;
 	-webkit-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
